--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>VueGComps</title>
+    <meta
+      name="description"
+      content="VueGComps is a e-commerce done in Vue 3 framework as a final project of a bootcamp"
+    />
   </head>
   <body>
     <noscript>
@@ -16,6 +20,5 @@
       >
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
